# react-native-cesium

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  ReactNativeCesium.podspec  nitro.json  package.json  post-script.js  release.config.cjs
.github/: dependabot.yml
.github/workflows/: ci.yml
android/: CMakeLists.txt  build.gradle  fix-prefab.gradle  gradle.properties
android/cmake/: spv_to_header.cmake
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CesiumBridgeAndroid.cpp  CesiumBridgeAndroid.h  cpp-adapter.cpp
android/src/main/cpp/vulkan/: VulkanBackend.cpp  VulkanBackend.h
android/src/main/cpp/vulkan/shaders/: sky.frag  sky.vert  terrain.frag  terrain.vert
android/src/main/java/com/margelo/nitro/reactnativecesium/: CesiumBridgeJNI.kt  HybridCesiumView.kt  HybridReactNativeCesium.kt
android/src/main/java/com/reactnativecesium/: ReactNativeCesiumPackage.kt
cpp/: cesium-native-smoke.cpp  cesium-native-smoke.hpp
cpp/engine/: CesiumEngine.cpp  CesiumEngine.hpp  DeletionQueue.cpp  DeletionQueue.hpp  GlobeCamera.cpp  GlobeCamera.hpp  GltfToMesh.cpp  GltfToMesh.hpp  ResourcePreparer.cpp  ResourcePreparer.hpp  TaskProcessor.cpp  TaskProcessor.hpp  TileLifecycleManager.cpp  TileLifecycleManager.hpp
cpp/fmt/: format.h
cpp/gestures/: GestureHandler.cpp  GestureHandler.hpp
cpp/metal/: MetalBackend.h  MetalBackend.mm  Shaders.metal
cpp/renderer/: IGPUBackend.hpp  RenderTypes.hpp  ShaderTypes.hpp
example/: .env_example  .prettierrc.js  App.tsx  README.md  app.json  env.d.ts  metro.config.js  package-lock.json  package.json
example/android/: build.gradle  gradle.properties  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/cesiumexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/components/: CreditsDialog.tsx  Joystick.tsx  LayerPicker.tsx  MapGestureHandler.tsx
example/hooks/: useCameraController.ts
example/ios/: Podfile
example/ios/CesiumExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/CesiumExample.xcodeproj/: project.pbxproj
example/ios/CesiumExample.xcodeproj/xcshareddata/xcschemes/: CesiumExample.xcscheme
example/ios/CesiumExample.xcworkspace/: contents.xcworkspacedata
ios/: Bridge.h  CesiumBridge.h  CesiumBridge.mm  CesiumNativeBridge.mm  HybridCesiumView.swift  HybridReactNativeCesium.swift  ReactNativeCesium-umbrella.h  react_native_cesium_ensure_native.rb  react_native_cesium_post_install.rb
ios/metal/: MetalBackend.h  MetalBackend.mm
scripts/cesium/: build.mjs  clean.mjs  clone.mjs  ensure-native.mjs
scripts/cesium/vcpkg-ports/zstd/: portfile.cmake
scripts/cesium/vcpkg-triplets/: arm64-ios-simulator.cmake  arm64-ios.cmake
src/: CesiumView.tsx  index.ts
src/specs/: cesium-view.nitro.ts  react-native-cesium.nitro.ts
